# aoc

./: .gitignore  README.md
2015/: README.md
2015/01/: 1.cpp  2.cpp
2015/02/: 1.cpp  2.cpp
2015/03/: 1.cpp
2015/src/01/: main.cpp
2015/src/02/: main.cpp
2015/src/03/: 2.cpp  main.cpp
2015/src/day_01/: main.cpp
2015/src/day_02/: main.cpp
2015/src/day_03/: main.cpp
2015/src/day_04/: main.cpp
2015/src/day_05/: main.cpp
2015/src/day_06/: main.cpp
2015/src/template/: main.cpp
2023/: CMakeLists.txt  README.md
2023/include/: aoc.cpp  aoc.h
2023/scripts/: add-day.sh
2023/src/: main.cpp
2023/src/day_01/: day_01.cpp  day_01.h
2023/src/day_02/: day_02.cpp  day_02.h
2023/src/day_03/: day_03.cpp  day_03.h
2023/src/day_04/: day_04.cpp  day_04.h
2023/src/day_05/: day_05.cpp  day_05.h
2023/src/day_06/: day_06.cpp  day_06.h
2023/src/day_07/: day_07.cpp  day_07.h
2023/src/day_08/: day_08.cpp  day_08.h
2023/src/day_09/: day_09.cpp  day_09.h
2023/src/template/: day_x.cpp  day_x.h  main.cpp
2024/: CMakeLists.txt  README.md
2024/scripts/: add-day.fish  run.fish
2024/src/: aoc.cpp  aoc.h  main.cpp
2024/src/day_01/: day_01.cpp  day_01.h
2024/src/day_02/: day_02.cpp  day_02.h
2024/src/day_03/: day_03.cpp  day_03.h
2024/src/day_04/: day_04.cpp  day_04.h
2024/src/day_05/: day_05.cpp  day_05.h
2024/src/day_06/: day_06.cpp  day_06.h
2024/src/day_07/: day_07.cpp  day_07.h
2024/src/day_08/: day_08.cpp  day_08.h
2024/src/day_09/: day_09.cpp  day_09.h
2024/src/day_10/: day_10.cpp  day_10.h
2024/src/template/: day_x.h
